@@ -24,6 +24,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.*;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.nio.ByteBuffer;
 import java.nio.MappedByteBuffer;
@@ -314,7 +319,7 @@ public class Helper {
     /**
      * Converts into an integer to be compatible with the still limited DataAccess class (accepts
      * only integer values). But this conversion also reduces memory consumption where the precision
-     * loss is accceptable. As +- 180° and +-90° are assumed as maximum values.
+     * loss is acceptable. As +- 180° and +-90° are assumed as maximum values.
      * <p>
      *
      * @return the integer of the specified degree
@@ -361,50 +366,76 @@ public class Helper {
     }
 
     public static void cleanMappedByteBuffer(final ByteBuffer buffer) {
-
+        // TODO avoid reflection on every call
         try {
             AccessController.doPrivileged(new PrivilegedExceptionAction<Object>() {
                 @Override
                 public Object run() throws Exception {
-                    try {
-                        // <=JDK8 class DirectByteBuffer {         sun.misc.Cleaner cleaner(Buffer buf) }
-                        // >=JDK9 class DirectByteBuffer { jdk.internal.ref.Cleaner cleaner(Buffer buf) }
-                        // Regarding MappedByteBufferAdapter, see #914
-                        final Class<?> directByteBufferClass =
-                                buffer.getClass().getSimpleName().equals("MappedByteBufferAdapter") ?
-                                        Class.forName("java.nio.MappedByteBufferAdapter") : Class.forName("java.nio.DirectByteBuffer");
-                        if (Constants.ANDROID) {
-                            final Method dbbFreeMethod = directByteBufferClass.getMethod("free");
-                            dbbFreeMethod.setAccessible(true);
-                            // call DirectByteBuffer.free(buffer)
-                            dbbFreeMethod.invoke(buffer);
+                    if (Constants.JRE_IS_MINIMUM_JAVA9) {
+                        // >=JDK9 class sun.misc.Unsafe { void invokeCleaner(ByteBuffer buf) }
+                        final Class<?> unsafeClass = Class.forName("sun.misc.Unsafe");
+                        // fetch the unsafe instance and bind it to the virtual MethodHandle
+                        final Field f = unsafeClass.getDeclaredField("theUnsafe");
+                        f.setAccessible(true);
+                        final Object theUnsafe = f.get(null);
+                        final Method method = unsafeClass.getDeclaredMethod("invokeCleaner", ByteBuffer.class);
+                        try {
+                            method.invoke(theUnsafe, buffer);
                             return null;
+                        } catch (Throwable t) {
+                            throw new RuntimeException(t);
                         }
-
-                        final Method dbbCleanerMethod = directByteBufferClass.getMethod("cleaner");
-                        dbbCleanerMethod.setAccessible(true);
-                        // call DirectByteBuffer.cleaner(buffer)
-                        final Object cleaner = dbbCleanerMethod.invoke(buffer);
-                        if (cleaner != null) {
-                            final Class<?> cleanerMethodReturnType = dbbCleanerMethod.getReturnType();
-                            final Method cleanMethod;
-                            if (Runnable.class.isAssignableFrom(cleanerMethodReturnType)) {
-                                // >=JDK9 
-                                cleanMethod = cleanerMethodReturnType.getDeclaredMethod("run");
-                            } else {
-                                cleanMethod = cleanerMethodReturnType.getDeclaredMethod("clean");
-                            }
-                            cleanMethod.setAccessible(true);
-                            cleanMethod.invoke(cleaner);
-                        }
-                    } catch (NoSuchMethodException ex) {
-                        // ignore if method cleaner or clean is not available, like on Android
                     }
+
+                    if (buffer.getClass().getSimpleName().equals("MappedByteBufferAdapter")) {
+                        if (!Constants.ANDROID)
+                            throw new RuntimeException("MappedByteBufferAdapter only supported for Android at the moment");
+
+                        // For Android 4.1 call ((MappedByteBufferAdapter)buffer).free() see #914
+                        Class<?> directByteBufferClass = Class.forName("java.nio.MappedByteBufferAdapter");
+                        callBufferFree(buffer, directByteBufferClass);
+                    } else {
+                        // <=JDK8 class DirectByteBuffer { sun.misc.Cleaner cleaner(Buffer buf) }
+                        //        then call sun.misc.Cleaner.clean
+                        final Class<?> directByteBufferClass = Class.forName("java.nio.DirectByteBuffer");
+                        try {
+                            final Method dbbCleanerMethod = directByteBufferClass.getMethod("cleaner");
+                            dbbCleanerMethod.setAccessible(true);
+                            // call: cleaner = ((DirectByteBuffer)buffer).cleaner()
+                            final Object cleaner = dbbCleanerMethod.invoke(buffer);
+                            if (cleaner != null) {
+                                final Class<?> cleanerMethodReturnType = dbbCleanerMethod.getReturnType();
+                                final Method cleanMethod = cleanerMethodReturnType.getDeclaredMethod("clean");
+                                cleanMethod.setAccessible(true);
+                                // call: ((sun.misc.Cleaner)cleaner).clean()
+                                cleanMethod.invoke(cleaner);
+                            }
+                        } catch (NoSuchMethodException ex2) {
+                            if (Constants.ANDROID)
+                                // For Android 5.1.1 call ((DirectByteBuffer)buffer).free() see #933
+                                callBufferFree(buffer, directByteBufferClass);
+                            else
+                                // ignore if method cleaner or clean is not available
+                                LOGGER.warn("NoSuchMethodException | " + Constants.JAVA_VERSION, ex2);
+                        }
+                    }
+
                     return null;
                 }
             });
         } catch (PrivilegedActionException e) {
-            throw new RuntimeException("unable to unmap the mapped buffer", e);
+            throw new RuntimeException("Unable to unmap the mapped buffer", e);
+        }
+    }
+
+    private static void callBufferFree(ByteBuffer buffer, Class<?> directByteBufferClass)
+            throws InvocationTargetException, IllegalAccessException {
+        try {
+            final Method dbbFreeMethod = directByteBufferClass.getMethod("free");
+            dbbFreeMethod.setAccessible(true);
+            dbbFreeMethod.invoke(buffer);
+        } catch (NoSuchMethodException ex2) {
+            LOGGER.warn("NoSuchMethodException | " + Constants.JAVA_VERSION, ex2);
         }
     }
 
@@ -418,7 +449,7 @@ public class Helper {
 
     public static String nf(long no) {
         // I like french localization the most: 123654 will be 123 654 instead
-        // of comma vs. point confusion for english/german guys.
+        // of comma vs. point confusion for English/German people.
         // NumberFormat is not thread safe => but getInstance looks like it's cached
         return NumberFormat.getInstance(Locale.FRANCE).format(no);
     }
